// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxMenuItem should render 1`] = `
<ListBoxMenuItem
  isActive={false}
  isHighlighted={false}
>
  <div
    className="cds--list-box__menu-item"
  >
    <div
      className="cds--list-box__menu-item__option"
    >
      <span>
        ListBox.MenuItem
      </span>
    </div>
  </div>
</ListBoxMenuItem>
`;

exports[`ListBoxMenuItem should render 2`] = `
<ListBoxMenuItem
  isActive={true}
  isHighlighted={false}
>
  <div
    className="cds--list-box__menu-item cds--list-box__menu-item--active"
  >
    <div
      className="cds--list-box__menu-item__option"
    >
      <span>
        ListBox.MenuItem
      </span>
    </div>
  </div>
</ListBoxMenuItem>
`;

exports[`ListBoxMenuItem should render 3`] = `
<ListBoxMenuItem
  isActive={false}
  isHighlighted={true}
>
  <div
    className="cds--list-box__menu-item cds--list-box__menu-item--highlighted"
  >
    <div
      className="cds--list-box__menu-item__option"
    >
      <span>
        ListBox.MenuItem
      </span>
    </div>
  </div>
</ListBoxMenuItem>
`;
